[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbraid"
dynamic = ["version", "dependencies"]
description = "Platform-agnostic quantum runtime framework."
authors = [{name = "qBraid Development Team"}, {email = "contact@qbraid.com"}]
readme = "README.md"
keywords = ["qbraid", "quantum", "openqasm", "runtime"]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://sdk.qbraid.com/"
Documentation = "https://docs.qbraid.com/sdk"
"Source Code" = "https://github.com/qBraid/qBraid"
"Bug Tracker" = "https://github.com/qBraid/qBraid/issues"
Discord = "https://discord.gg/TPBU2sa8Et"
"Launch on Lab" = "https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qBraid.git"

[project.optional-dependencies]
azure = ["azure-quantum>=2.0,<2.3", "azure-storage-blob>=12.20,<13.0", "azure-identity>=1.17,<2.0"]
bloqade = ["bloqade-analog>=0.16.1,<0.17.0"]
braket = ["amazon-braket-sdk>=1.83.0,<1.96.0", "pytket-braket>=0.30,<0.43"]
cirq = ["cirq-core>=1.3,<1.6", "cirq-ionq>=1.3,<1.5", "ply>=3.6", "attrs>=21.3.0"]
cudaq = ["cudaq>=0.9.0"]
ionq = ["qiskit-ionq>=0.5.12"]
oqc = ["oqc-qcaas-client>=3.11.0"]
pennylane = ["pennylane<0.42"]
pyqubo = ["pyqubo>=1.4.0"]
pyquil = ["pyquil>=4.4", "qcs-sdk-python>=0.21.12,<0.21.19"]
pytket = ["pytket>=1.31"]
qir = ["qbraid-qir>=0.2.0,<=0.4.0", "qbraid-core[runner]>=0.1.39"]
qiskit = ["qiskit>=1.0,<3.0", "qiskit-ibm-runtime>=0.25.0,<0.41", "qiskit-qasm3-import>=0.5.1", "packaging>=20.0"]
quera = ["flair-visual[vis]>=0.5.3", "pandas"]
visualization = ["ipython", "matplotlib", "pylatexenc", "ipympl", "pyqasm[visualization]"]

[project.entry-points."qbraid.programs"]
qubo = "qbraid.programs.annealing.qubo:QuboProgram"
cpp_pyqubo = "qbraid.programs.annealing.cpp_pyqubo:PyQuboModel"
braket_ahs = "qbraid.programs.ahs.braket_ahs:BraketAHS"
braket = "qbraid.programs.gate_model.braket:BraketCircuit"
cirq = "qbraid.programs.gate_model.cirq:CirqCircuit"
ionq = "qbraid.programs.gate_model.ionq:IonQProgram"
pennylane = "qbraid.programs.gate_model.pennylane:PennylaneTape"
pyquil = "qbraid.programs.gate_model.pyquil:PyQuilProgram"
qiskit = "qbraid.programs.gate_model.qiskit:QiskitCircuit"
pytket = "qbraid.programs.gate_model.pytket:PytketCircuit"
qasm2 = "qbraid.programs.gate_model.qasm2:OpenQasm2Program"
qasm3 = "qbraid.programs.gate_model.qasm3:OpenQasm3Program"
cudaq = "qbraid.programs.gate_model.cudaq:CudaQKernel"

[project.entry-points."qbraid.providers"]
aws = "qbraid.runtime.aws.provider:BraketProvider"
azure = "qbraid.runtime.azure.provider:AzureQuantumProvider"
ibm = "qbraid.runtime.ibm.provider:QiskitRuntimeProvider"
ionq = "qbraid.runtime.ionq.provider:IonQProvider"
qbraid = "qbraid.runtime.native.provider:QbraidProvider"
oqc = "qbraid.runtime.oqc.provider:OQCProvider"

[project.entry-points."qbraid.jobs"]
aws = "qbraid.runtime.aws.job:BraketQuantumTask"
azure = "qbraid.runtime.azure.job:AzureQuantumJob"
ibm = "qbraid.runtime.ibm.job:QiskitJob"
ionq = "qbraid.runtime.ionq.job:IonQJob"
qbraid = "qbraid.runtime.native.job:QbraidJob"
oqc = "qbraid.runtime.oqc.job:OQCJob"

[tool.setuptools.dynamic]
version = {attr = "qbraid._version.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = false
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"
log_file = "pytest.log"
log_file_level = "WARNING"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
  "tests",
]
markers = [
  "remote: mark a test as requiring a remote connection",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
    "ignore::RuntimeWarning:numpy.linalg.linalg",
    "ignore::pytest.PytestCollectionWarning",
    "ignore:No gate definition.*:RuntimeWarning:qiskit.providers.backend_compat"
]

[tool.coverage.run]
parallel = true
source = ["qbraid"]
omit = [
  "**/qbraid/runtime/aws/tracker.py",
  "**/qbraid/runtime/braket.py",
  "**/qbraid/runtime/qiskit.py",
  "**/qbraid/visualization/draw_circuit.py",
  "**/qbraid/transpiler/conversions/*/*_extras.py",
  "**/qbraid/programs/circuits/*",
]

[tool.coverage.paths]
source = ["qbraid", ".tox/*/lib/python*/site-packages/qbraid"]

[tool.coverage.report]
show_missing = true
skip_covered = true
ignore_errors = true
exclude_lines = [
  "raise NotImplementedError",
  "return NotImplemented",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "logger.debug",
  "logger.info",
  "__all__",
  "def __getattr__",
  "def __dir__",
  "# pragma: no cover"
]

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.__pycache__
  | \.tox
  | \.venv
  | dist
)/
'''

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = "C0103,C0414,E0401,R0801,R0902,R0903,R0911,R0912,R0914,R0917,W0212,W0511,W0621"
extension-pkg-whitelist = ["rustworkx"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.ruff]
[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]


[tool.mypy]
disable_error_code = [
    "valid-type",
    "import-untyped"
]
exclude = "^(qbraid/(programs/(gate_model/|ahs/|annealing/)|transpiler/conversions/|interface/|runtime/(oqc/|ionq/|ibm/|aws/)))"
