[metadata]
name = qbraid
license = GPL v3.0
author = qBraid Development Team
author_email = contact@qbraid.com
description = A Python toolkit for cross-framework abstraction of quantum programs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = qbraid, quantum
url = https://www.qbraid.com/
project_urls =
    Documentation = https://docs.qbraid.com/en/latest/
    Bug Tracker = https://github.com/qBraid/qBraid/issues
    Source Code = https://github.com/qBraid/qBraid
    Discord = https://discord.gg/TPBU2sa8Et
    Launch on Lab = https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qBraid.git
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.9

install_requires =
    amazon-braket-sdk>=1.42.1,<1.60.0
    cirq>=1.3.0.dev20230801170401,<1.4.0
    numpy>=1.17,<1.24
    pyquil>=3.5.4,<3.6.0
    pytket>=1.16,<1.18
    pytket-braket>=0.27,<0.30
    qiskit-terra>=0.24.0
    qiskit-ibm-provider>=0.5.3
    qiskit-qasm3-import>=0.2.0,<0.3.0
    requests>=2.28.0
    ipython

[options.extras_require]
test =
    sympy
    pytest
    coverage
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    docutils<0.17

[options.entry_points]
qbraid.transpiler =
    braket = qbraid.transpiler:BraketCircuitWrapper
    cirq = qbraid.transpiler:CirqCircuitWrapper
    pyquil = qbraid.transpiler:PyQuilProgramWrapper
    qiskit = qbraid.transpiler:QiskitCircuitWrapper
    pytket = qbraid.transpiler:PytketCircuitWrapper
    qasm2 = qbraid.transpiler:QasmCircuitWrapper
    qasm3 = qbraid.transpiler:Qasm3CircuitWrapper
qbraid.devices =
    aws.device = qbraid.devices.aws:AwsDeviceWrapper
    aws.job = qbraid.devices.aws:AwsQuantumTaskWrapper
    ibm.device = qbraid.devices.ibm:IBMBackendWrapper
    ibm.job = qbraid.devices.ibm:IBMJobWrapper
