[metadata]
name = qbraid
license = GPL v3.0
author = qBraid Development Team
author_email = contact@qbraid.com
description = A Python toolkit for cross-framework abstraction of quantum programs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = qbraid, quantum
url = https://www.qbraid.com/
project_urls =
    Documentation = https://docs.qbraid.com/en/latest/
    Bug Tracker = https://github.com/qBraid/qBraid/issues
    Source Code = https://github.com/qBraid/qBraid
    Discord = https://discord.gg/TPBU2sa8Et
    Launch on Lab = https://account.qbraid.com/?gitHubUrl=https://github.com/qBraid/qBraid.git
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.9

install_requires =
    networkx>=2.5,<4.0
    numpy>=1.17,<1.27
    openqasm3[parser]>=0.4.0,<0.6.0
    ply>=3.6
    qbraid-core<0.2.0

[options.extras_require]
braket =
    amazon-braket-sdk>=1.42.1,<1.74.0
cirq =
    cirq-core>=1.3.0,<1.4.0
pennylane =
    pennylane>=0.33.1,<0.36.0
pytket =
    pytket>=1.16.0,<1.26.0
pyquil =
    pyquil>=3.5.4,<4.4.0
qiskit =
    qiskit>=0.44.0,<1.1.0
    qiskit-ibm-provider>=0.5.3,<0.11.0
    qiskit-ibm-runtime>=0.18.0,<0.21.0
    qiskit[visualization]
qasm3 =
    qiskit-qasm3-import>=0.2.0,<0.5.0
ionq =
    cirq-core>=1.3.0,<1.4.0
    cirq-ionq>=1.3.0,<1.4.0
    pytket-braket>=0.30.0,<0.35.0
all =
    amazon-braket-sdk>=1.42.1,<1.74.0
    cirq-core>=1.3.0,<1.4.0
    cirq-ionq>=1.3.0,<1.4.0
    pennylane>=0.33.1,<0.36.0
    pytket>=1.16.0,<1.26.0
    pytket-braket>=0.30.0,<0.35.0
    pyquil>=3.5.4,<4.5.0
    qiskit>=0.44.0,<1.1.0
    qiskit-ibm-provider>=0.5.3,<0.11.0
    qiskit-ibm-runtime>=0.18.0,<0.21.0
    qiskit-qasm3-import>=0.2.0,<0.5.0
visualization =
    ipython
    matplotlib
    pylatexenc
docs =
    sphinx~=7.2.6
    sphinx-autodoc-typehints>=1.24,<2.1
    sphinx-rtd-theme>=1.3,<2.1
    docutils<0.21

[options.entry_points]
qbraid.programs =
    braket = qbraid.programs.braket:BraketCircuit
    cirq = qbraid.programs.cirq:CirqCircuit
    pennylane = qbraid.programs.pennylane:PennylaneTape
    pyquil = qbraid.programs.pyquil:PyQuilProgram
    qiskit = qbraid.programs.qiskit:QiskitCircuit
    pytket = qbraid.programs.pytket:PytketCircuit
    qasm2 = qbraid.programs.qasm2:OpenQasm2Program
    qasm3 = qbraid.programs.qasm3:OpenQasm3Program
qbraid.providers =
    aws.device = qbraid.providers.aws:BraketDevice
    aws.job = qbraid.providers.aws:BraketQuantumTask
    ibm.device = qbraid.providers.ibm:QiskitBackend
    ibm.job = qbraid.providers.ibm:QiskitJob
